docs(jvm): 更新 JVM 内存区域相关文档内容 - 修改了 JVM 栈内存参数的描述，明确指出通常不需要手动设置 -Xss256k - 新增了关于 String Table 的详细章节，包括字符串常量池、不可变性、final 类特性和内存分配等内容 - 添加了 String 基本操作和内存分配的示例代码及说明 - 补充了 JDK6 到 JDK8 中字符串常量池位置迁移的相关信息和验证示例chore(deps): 升级多个依赖包版本
- 将 @types/node从 24.3.1 更新至 24.7.0
- 将 @shikijs/vitepress-twoslash 从 3.12.2 更新至3.13.0
- 将 vitepress-plugin-tabs 从0.7.1 更新至 0.7.3
- 更新了 shiki、undici-types以及其他相关依赖的版本
- 同步更新了所有涉及 @types/node 版本变更的插件依赖配置